# resolv

./: .gitignore  .travis.yml  ChangeLog.md  DEVELOPER.md  LICENSE  aclocal.m4  cabal.haskell-ci  cabal.project  configure.ac  haskell-ci.patch  regenerate-ci.sh  resolv.buildinfo.in  resolv.cabal
.github/workflows/: haskell-ci.yml
cbits/: hs_resolv.h
src/: Compat.hs
src-test/: Tests1.hs
src/Network/: DNS.hs
src/Network/DNS/: FFI.hs  Message.hs
